--- a/Personales/1_Biografia.html
+++ b/Personales/1_Biografia.html
@@ -4,20 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Biografía</title>
+    <style>
+        a{
+            font-size: 2vw;
+        }
+        p{
+            text-align: justify;
+            padding-right: 2vw; 
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container">
+    <a href="Index_Personales.html">&lt;- Volver al index Personales.</a>
+    <a href="2_Pasatiempo.html" style="float: right;">Siguiente archivo personal -&gt;</a>
+    <div class="container mt-5">
         <center>
-            <h3 class="mt-5">Fabián Eduardo Cruz Amador</h3>
+            <h3 style="margin-bottom: 3vh;">Biografía: Fabián Eduardo Cruz Amador</h3>
         </center>
-        <p style="text-align: justify; margin-top: 2vh;">Nací el 12 de Junio del 2001 En Monterrey, Nuevo León, México. 
-        Desde pequeño era una persona calmada y en los estudios siempre tuve buenas notas en materias exactas. Las humanidades rara vez me gustaron.
-        También cabe destacar que me crié como una persona muy independiente, mis padres vivían muy ocupados. <br> <br>
-        A la temprana edad de 12 años, en la etapa de la secundaria <u>ya sabía que mi pasión sería la programación</u>,
+        <table>
+            <tr>
+            <td>
+                <p>Nací el 12 de Junio del 2001 En Monterrey, Nuevo León, México. 
+                    Desde pequeño era una persona calmada y en los estudios siempre tuve buenas notas en materias exactas. Las humanidades rara vez me gustaron.
+                    También cabe destacar que me crié como una persona muy independiente, mis padres vivían muy ocupados. <br> <br>
+                    </p>
+            </td>
+            <td>
+                <center>
+                <img src="../Imagenes/1_tb.jpg" width="80%" style="border-radius: 10%; min-width: 200px;">
+                </center>
+            </td>
+        </tr>
+        </table>
+        <p>A la temprana edad de 12 años, en la etapa de la secundaria <u>ya sabía que mi pasión sería la programación</u>,
         pues <u>ya me encontraba escribiendo mis primeros scripts en JavaScript</u>.
         En la misma etapa de la secundaría conocí a mi mejor amigo, y junto con él la secundaria confió distintos proyectos digitales de la misma;
         El más importante considero que fué hacer el videoclip de toda nuestra generación. Este sería mostrado en la graduación como recuerdo de la misma.
