--- a/Personales/1_Biografia.html
+++ b/Personales/1_Biografia.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Biografía</title>
     <style>
-        a{
+        a {
             font-size: 2vw;
         }
-        p{
+
+        p {
+            font-size: 1.5vw;
             text-align: justify;
-            padding-right: 2vw; 
+            padding: 2vw;
         }
     </style>
 </head>
@@ -26,32 +29,86 @@
         </center>
         <table>
             <tr>
-            <td>
-                <p>Nací el 12 de Junio del 2001 En Monterrey, Nuevo León, México. 
-                    Desde pequeño era una persona calmada y en los estudios siempre tuve buenas notas en materias exactas. Las humanidades rara vez me gustaron.
-                    También cabe destacar que me crié como una persona muy independiente, mis padres vivían muy ocupados. <br> <br>
+                <td>
+                    <p>Nací el 12 de Junio del 2001 En Monterrey, Nuevo León, México.
+                        Desde pequeño era una persona calmada y en los estudios siempre tuve buenas notas en materias
+                        exactas. Las humanidades rara vez me gustaron.
+                        También cabe destacar que me crié como una persona muy independiente, mis padres vivían muy
+                        ocupados. <br> <br>
                     </p>
-            </td>
-            <td>
-                <center>
-                <img src="../Imagenes/1_tb.jpg" width="80%" style="border-radius: 10%; min-width: 200px;">
-                </center>
-            </td>
-        </tr>
+                </td>
+                <td>
+                    <center>
+                        <img src="../Imagenes/1_tb.jpg" width="80%" style="border-radius: 10%; min-width: 150px;">
+                    </center>
+                </td>
+            </tr>
         </table>
-        <p>A la temprana edad de 12 años, en la etapa de la secundaria <u>ya sabía que mi pasión sería la programación</u>,
-        pues <u>ya me encontraba escribiendo mis primeros scripts en JavaScript</u>.
-        En la misma etapa de la secundaría conocí a mi mejor amigo, y junto con él la secundaria confió distintos proyectos digitales de la misma;
-        El más importante considero que fué hacer el videoclip de toda nuestra generación. Este sería mostrado en la graduación como recuerdo de la misma.
-        Actualmente él y Yo seguimos en contacto y tenemos algunas visiones de hacer proyectos profesionales en un futuro.<br> <br>
-    
-        Entre los 15 y 16 años empecé en mi primer trabajo con un famiiar haciendo reparaciones de celulares, en ese empleo duré 2 años y medio
-        y de vez en cuando actualmente mi familiar me solicita para trabajos especificos. <br>
-        Hoy en día a los 18 años me encuentro en el 4to semestre de la carrera "Ingeniería en Tecnología de Software" en la Facultade de Ingeniería Mecánica y Eléctrica.
-        También estoy contemplando trabajar como desarrollador de tiempo completo; pero esa idea todavía la tengo que contemplar más para adecuar mis tiempos con la facultad.<br>
-        De cualquier manera, el trabajo que quiero conseguir es el de un "desarrollador Full Stack", contribuir en el desarrollo de aplicaciones tanto en el front-end, como en el back-end. 
-        A largo plazo me gustaría escalar en una empresa al puesto de Arquitecto de Software, pues así podría prefeccionar mis dotes como desarrollador, entre otros detalles.<br>
-    </p>
+        <table>
+            <tr>
+                <td>
+                    <center>
+                        <img src="../Imagenes/2_tb.png" width="80%" style="border-radius: 20%; min-width: 150px;">
+                    </center>
+                </td>
+                <td>
+
+                    <p>A la temprana edad de 12 años, en la etapa de la secundaria <u>ya sabía que mi pasión sería la
+                            programación</u>, pues <u>ya me encontraba escribiendo mis primeros scripts en
+                            JavaScript</u>.
+                    </p>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td>
+                    <p>
+                        En la misma etapa de la secundaría conocí a mi mejor amigo, y junto con él la secundaria confió
+                distintos proyectos digitales de la misma;
+                El más importante considero que fué hacer el videoclip de toda nuestra generación. Este sería mostrado
+                en la graduación como recuerdo de la misma.
+                    </p>
+                </td>
+                <td>
+                    <center>
+                        <img src="../Imagenes/3_tb.gif" width="90%" style="border-radius: 5%; min-width: 150px;">
+                    </center>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td>
+                    <center>
+                        <img src="../Imagenes/4_tb.jpg" width="80%" style="border-radius: 5%; min-width: 150px;">
+                    </center>
+                </td>
+                <td>
+                    <p>Actualmente él y Yo seguimos en contacto y tenemos algunas visiones de hacer proyectos profesionales en
+                        un futuro.
+                    </p>
+                </td>
+            </tr>
+        </table>
+        <!--
+            <p>
+                
+
+                Entre los 15 y 16 años empecé en mi primer trabajo con un famiiar haciendo reparaciones de celulares, en
+                ese empleo duré 2 años y medio
+                y de vez en cuando actualmente mi familiar me solicita para trabajos especificos. <br>
+                Hoy en día a los 18 años me encuentro en el 4to semestre de la carrera "Ingeniería en Tecnología de
+                Software" en la Facultade de Ingeniería Mecánica y Eléctrica.
+                También estoy contemplando trabajar como desarrollador de tiempo completo; pero esa idea todavía la
+                tengo que contemplar más para adecuar mis tiempos con la facultad.<br>
+                De cualquier manera, el trabajo que quiero conseguir es el de un "desarrollador Full Stack", contribuir
+                en el desarrollo de aplicaciones tanto en el front-end, como en el back-end.
+                A largo plazo me gustaría escalar en una empresa al puesto de Arquitecto de Software, pues así podría
+                prefeccionar mis dotes como desarrollador, entre otros detalles.<br>
+            </p>
+            -->
+
     </div>
 </body>
 
