--- a/Personales/1_Biografia.html
+++ b/Personales/1_Biografia.html
@@ -91,23 +91,99 @@
                 </td>
             </tr>
         </table>
-        <!--
-            <p>
-                
-                Entre los 15 y 16 años empecé en mi primer trabajo con un famiiar haciendo reparaciones de celulares, en
+        <table>
+            <tr>
+                <td>
+                    <p>
+                        Entre los 15 y 16 años empecé en mi primer trabajo con un famiiar haciendo reparaciones de celulares, en
                 ese empleo duré 2 años y medio
                 y de vez en cuando actualmente mi familiar me solicita para trabajos especificos. <br>
-                Hoy en día a los 18 años me encuentro en el 4to semestre de la carrera "Ingeniería en Tecnología de
-                Software" en la Facultade de Ingeniería Mecánica y Eléctrica.
-                También estoy contemplando trabajar como desarrollador de tiempo completo; pero esa idea todavía la
-                tengo que contemplar más para adecuar mis tiempos con la facultad.<br>
-                De cualquier manera, el trabajo que quiero conseguir es el de un "desarrollador Full Stack", contribuir
-                en el desarrollo de aplicaciones tanto en el front-end, como en el back-end.
-                A largo plazo me gustaría escalar en una empresa al puesto de Arquitecto de Software, pues así podría
-                prefeccionar mis dotes como desarrollador, entre otros detalles.<br>
-            </p>
-            -->
-
+                    </p>
+                </td>
+                <td>
+                    <center>
+                        <img src="../Imagenes/5_tb.jpg" width="90%" style="border-radius: 5%; min-width: 150px;">
+                    </center>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td>
+                    <center>
+                        <img src="../Imagenes/6_tb.png" width="100%" style="border-radius: 5%; min-width: 150px;">
+                    </center>
+                </td>
+                <td>
+                    <p>Hoy en día a los 18 años me encuentro en el 4to semestre de la carrera "Ingeniería en Tecnología de
+                        Software" en la Facultade de Ingeniería Mecánica y Eléctrica.
+                    </p>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td>
+                    <p>
+                        También estoy contemplando trabajar como desarrollador de tiempo completo; pero esa idea todavía la
+                        tengo que contemplar más para adecuar mis tiempos con la facultad.<br>
+                        De cualquier manera, el trabajo que quiero conseguir es el de un "desarrollador Full Stack", contribuir
+                        en el desarrollo de aplicaciones tanto en el front-end, como en el back-end.
+                        A largo plazo me gustaría escalar en una empresa al puesto de Arquitecto de Software, pues así podría
+                        prefeccionar mis dotes como desarrollador, entre otros detalles.<br>
+                   </p>
+                </td>
+                <td>
+                    <center>
+                        <img src="../Imagenes/7_tb.png" width="100%" style="border-radius: 5%; min-width: 150px;">
+                    </center>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td>
+                    <center>
+                        <img src="../Imagenes/8_tb.jpeg" width="55%" style="border-radius: 5%; min-width: 150px;">
+                    </center>
+                </td>
+                <td>
+                    <p>
+                        He viajado en múltiples ocasiónes en avión hacia la ciudad de Cancún, Quintana Roo. También Ciudad de México,
+                        y Tamaulipas; sin embargo, no he salido del país.
+                    </p>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td>
+                    <p>
+                       Sin duda alguna me gustaría visitar muchos países y ciudades, tales como: Japón, Noruega, Alemania, Francia y Paris.
+                    </p>
+                </td>
+                <td>
+                    <center>
+                        <img src="../Imagenes/9_tb.jpg" width="80%" style="border-radius: 5%; min-width: 150px; max-width: 300px;">
+                    </center>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td>
+                    <center>
+                        <img src="../Imagenes/10_tb.jpg" width="80%" style="border-radius: 5%; min-width: 150px; border: solid 2px black;">
+                    </center>
+                </td>
+                <td>
+                    <p>
+                       Algunos de mis pasatiempos con los que actualmente le dedico tiempo es al modelado 3D, también tengo proyectos hechos en
+                       el motor de Videojuegos y aplicaciones "Unity", donde he desarrollado cosas por pasión.
+                    </p>
+                </td>
+            </tr>
+        </table>
     </div>
 </body>
 
