--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
                 <td>•Matrícula: 1871963</td>
             </tr>
             <tr>
-                <td>•Hora: </td>
+                <td>•Hora: V5</td>
             </tr>
             <tr>
                 <td>•Lenguajes de Programación</td>
